tests/baselines/reference/symbolLinkDeclarationEmitModuleNames.errors.txt
tests/cases/compiler/monorepo/context/src/bindingkey.ts(1,29): error TS2307: Cannot find module '@loopback/context'.


==== tests/cases/compiler/monorepo/core/src/application.ts (0 errors) ====
    import { Constructor } from "@loopback/context";
    export type ControllerClass = Constructor<any>;
==== tests/cases/compiler/monorepo/core/src/usage.ts (0 errors) ====
    import { ControllerClass } from './application';
    import { BindingKey } from '@loopback/context';
    
    export const CONTROLLER_CLASS = BindingKey.create<ControllerClass>(null as any); // line in question
==== tests/cases/compiler/monorepo/context/src/value-promise.ts (0 errors) ====
    export type Constructor<T> = (...args: any[]) => T;
==== tests/cases/compiler/monorepo/context/src/bindingkey.ts (1 errors) ====
    import { Constructor } from "@loopback/context"
                                ~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module '@loopback/context'.
    export class BindingKey<T> {
      readonly __type: T;
      static create<T extends Constructor<any>>(ctor: T) {
        return new BindingKey<T>();
      }
    }
    
==== tests/cases/compiler/monorepo/context/index.ts (0 errors) ====
    export * from "./src/value-promise";
    export * from "./src/bindingkey";
    